--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -7,30 +7,35 @@ h5,
 h6,
 a,
 p,
-title{
+title {
   font-family: $font;
   color: $text;
 }
 
-h4, h3{
+h4,
+h3 {
   font-family: $font;
   color: auto;
 }
 
+p{
+  line-height: 1.5em;
+}
+
 $font-sizes: (
-  h1: clamp(4rem , 5vw, 7.2rem),
+  h1: clamp(4rem, 5vw, 7.2rem),
   h2: clamp(2.4rem, 5vw, 5.6rem),
   h3: clamp(2.8rem, 5vw, 3rem),
   h4: clamp(1.8rem, 1.5vw, 2.4rem),
   h5: clamp(1.6rem, 1vw, 1.8rem),
-  h6: clamp(1.4rem, .5vw, 1.6rem),
+  h6: clamp(1.4rem, 0.5vw, 1.6rem),
   a: auto,
-  p: clamp(1.2rem, .5vw, 1.4rem),
-  title: 1.6rem
+  p: clamp(1.4rem, 0.5vw, 1.6rem),
+  title: 1.6rem,
 );
 
 @each $tag, $size in $font-sizes {
-    #{$tag}{
-        font-size: $size;
-    }
+  #{$tag} {
+    font-size: $size;
+  }
 }
