--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -14,6 +14,7 @@
     width: 100%;
     height: 100%;
     @include flex(row, center, center);
+    margin-left: 1em;
     svg {
       width: 5.8rem;
     }
