--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,27 +1,28 @@
 @use "../abstracts/" as *;
 
 .hero {
-  height: 100vh;
+  min-height: 100vh;
   padding-top: 20vh;
   @include flex(column, center, center);
   position: relative;
   overflow: hidden;
 
-  @include media("<=tablet"){
-    height: 50vh;
+  /* iPad Pro */
+  @media screen and (min-width: 1024px) and (min-height: 1366px) {
+    min-height: 50vh;
   }
 
-  // @include media(">phoneL") {
-  //   min-height: 40vh;
-  // }
+  @include media("<=tablet") {
+    min-height: 50vh;
+  }
 
-  // @include media(">tablet") {
-  //   min-height: 60vh;
-  // }
+  @include media("<=phoneL") {
+    min-height: 40vh;
+  }
 
-  // @include media(">desktop") {
-  //   min-height: 100vh;
-  // }
+  @include media("<=phone") {
+    min-height: 50vh;
+  }
 
   &__carousel {
     position: absolute;
@@ -29,19 +30,30 @@
     left: 0;
     width: 100%;
     z-index: 0;
-    
+
     img {
       position: fixed;
       top: 0;
       left: 0;
       width: 100%;
-      min-height: 100%;
+      height: 100%;
       object-fit: cover;
       opacity: 0;
-      transition: opacity .5s ease;
+      transition: opacity 0.5s ease;
       z-index: -1;
+
+      /* iPad Pro */
+      @media screen and (min-width: 1024px) and (min-height: 1366px) {
+        position: absolute;
+        height: 50vh;
+      }
+
+      @include media("<=tablet") {
+        position: absolute;
+        height: 50vh;
+      }
     }
-    img.fadeIn{
+    img.fadeIn {
       opacity: 1;
     }
 
@@ -51,8 +63,21 @@
       top: 0;
       left: 0;
       width: 100%;
-      min-height: 100%;
-      background: rgba(0, 0, 0, 0.7);
+      min-height: 100vh;
+      background: rgba(0, 0, 0, 0.5);
+
+      /* iPad Pro */
+      @media screen and (min-width: 1024px) and (min-height: 1366px) {
+        position: absolute;
+        min-height: 52vh;
+        box-shadow: inset 0px -150px 80px 0px #070014;
+      }
+
+      @include media("<=tablet") {
+        position: absolute;
+        min-height: 52vh;
+        box-shadow: inset 0px -70px 60px 0px #070014;
+      }
     }
   }
 
